# Derivative-Calculator

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  derivative_calculator.py  derivative_plotter.py  example_derivative_calculator.ipynb  hybrid_derivative_calculator.py  pyproject.toml  setup.py  testing_notebook.ipynb
.github/workflows/: ci.yml
derivkit/: __init__.py  hybrid.py  plotter.py
docs/: requirements.txt
docs/source/: api.rst  citing.rst  conf.py  contributors.rst  derivkit.rst  index.md  index.rst  installation.rst  introduction.rst  license.rst  notebooks.rst  references.rst  stem_method.rst  usage.rst
notebooks/: derivkit_example_usage.ipynb  stem_vs_stencil_comparison.ipynb
src/derivative_calculator/: __init__.py  derivative_calculator.py
